--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.9",
+    "cenndiii-shop": "file:",
     "cra-template-tailwindcss": "4.0.1",
+    "crypto-random-string": "^5.0.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
@@ -15,7 +18,8 @@
     "react-select": "^5.10.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "crypto-browserify": "^3.12.1"
   }
 }
