--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
+    "@mui/material": "^6.4.5",
     "axios": "^1.7.9",
     "cra-template-tailwindcss": "4.0.1",
     "lucide-react": "^0.474.0",
@@ -11,10 +14,11 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "start": "^5.1.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
