--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SP29;enc
 spring.datasource.username=sa
 spring.datasource.password=12
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Send mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=linhvqdev@gmail.com
+spring.mail.password=dwlu aflj wmbg ttjo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+# Config save image
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
