--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SP29;enc
 spring.datasource.username=sa
 spring.datasource.password=1234
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# application.properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=trongtin1804204@gmail.com
+spring.mail.password=esyn latd pguz pwek
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
