--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -13,9 +13,11 @@
     "crypto-random-string": "^5.0.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
