--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
-    "@mui/material": "^6.4.5",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
     "axios": "^1.7.9",
     "cenndiii-shop": "file:",
     "cra-template-tailwindcss": "4.0.1",
@@ -18,6 +19,7 @@
     "react-color": "^2.19.3",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
