--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -16,8 +16,10 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
+    "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
