--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=CenndiiiShop
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SD29;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SP29;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=1234
+spring.datasource.password=12
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # Send mail
 spring.mail.host=smtp.gmail.com
