--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
-    "@mui/icons-material": "^6.4.6",
+    "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.6",
     "axios": "^1.7.9",
     "cenndiii-shop": "file:",
@@ -17,9 +17,11 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
+    "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
