--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -27,6 +27,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "start": "^5.1.0",
+    "swiper": "^11.2.5",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
   },
