--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Config save image
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+# session
+server.servlet.session.cookie.name=JSESSIONID
+server.servlet.session.cookie.same-site=Lax
+server.servlet.session.cookie.secure=false
