--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -13,6 +13,8 @@
     "cra-template-tailwindcss": "4.0.1",
     "crypto-random-string": "^5.0.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -25,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
     "react-spinners": "^0.15.0",
+    "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.3",
     "start": "^5.1.0",
     "web-vitals": "^4.2.4",
