feat(security): login with admin and staff permitsions

--- a/Backend/src/main/resources/config/application.properties
+++ b/Backend/src/main/resources/config/application.properties
@@ -26,3 +26,4 @@ REFRESH_TOKEN_EXPIRED_TIME=10800000
 CUSTOMER_PERMISSION_NAME=CUSTOMER
 ISSUER=cenndiii
 #logging.level.org.springframework=DEBUG
+spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
