--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -13,6 +13,7 @@
     "cra-template-tailwindcss": "4.0.1",
     "crypto-random-string": "^5.0.0",
     "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
