--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -133,6 +133,15 @@
             <version>3.4.2</version>
         </dependency>
 
+
+<!--        QR CODE-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
