--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -16,12 +16,14 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-moment": "^1.1.3",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
