--- a/Backend/src/main/resources/config/application.properties
+++ b/Backend/src/main/resources/config/application.properties
@@ -27,3 +27,7 @@ CUSTOMER_PERMISSION_NAME=CUSTOMER
 ISSUER=cenndiii
 #logging.level.org.springframework=DEBUG
 spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
+
+# VNPAY Config
+
+
