--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "antd": "^5.24.4",
     "axios": "^1.7.9",
     "cenndiii-shop": "file:",
     "cra-template-tailwindcss": "4.0.1",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
