--- a/Backend/src/main/resources/config/application.properties
+++ b/Backend/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CenndiiiShop
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SD29;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SD299;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=1234
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -27,3 +27,8 @@ CUSTOMER_PERMISSION_NAME=CUSTOMER
 ISSUER=cenndiii
 #logging.level.org.springframework=DEBUG
 spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
+#vnpay
+vnpay.tmnCode=GVX8EABZ
+vnpay.hashSecret=WRT5RG940JPCNKUR2M9TPQLLP58Q2ZKZ
+vnpay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.returnUrl=http://localhost:3000/vnpay-return
