--- a/Frontend/cenndiii-shop/package.json
+++ b/Frontend/cenndiii-shop/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-datepicker": "^8.1.0",
