--- a/Backend/src/main/resources/config/application.properties
+++ b/Backend/src/main/resources/config/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_SD29;enc
 spring.datasource.username=sa
 spring.datasource.password=1234
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 # Send mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
